マリケン電荷を実装
